<resources>
    <string name="app_name">
        Scouting v1.2
        <!--        Yango-->
    </string>
    <string name="action_settings">Settings</string>
    <string-array name="teams">
        <item>R Close</item>
        <item>R Middle</item>
        <item>R Far</item>
        <item>B Close</item>
        <item>B Middle</item>
        <item>B Far</item>
    </string-array>

    <string-array name="ability_categories">
        <item>Lower</item>
        <item>Outer</item>
        <item>Inner</item>
        <item>CP Rotation</item>
        <item>CP Position</item>
        <item>Climb</item>
        <item>Balance</item>
    </string-array>

    <string-array name="languages">
        <item>Java</item>
        <item>C++</item>
        <item>LabView</item>
    </string-array>

    <string-array name="wheels">
        <item>6x6</item>
        <item>8x8</item>
        <item>Other</item>
    </string-array>

    <string-array name="intake">
        <item>Floor</item>
        <item>Feeder</item>
        <item>Both</item>
        <item>None</item>
    </string-array>

    <string-array name="PCCarry">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="shoot">
        <item>Lower</item>
        <item>Higher</item>
        <item>Both</item>
        <item>None</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message">Are you sure you want to cancel?</string>
    <string name="dialog_title">Exit Form</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello Scouter</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Matches</string>
    <string name="menu_gallery">Team Overview</string>
    <string name="menu_slideshow">Ability Rating</string>
    <string name="menu_tools">Team Comparision</string>
    <string name="menu_team_comparision">Team Comparision</string>
    <string name="menu_send">Send</string>
</resources>
