<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="Main">
        <menu>
            <item
                android:id="@+id/navMatches"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
        </menu>
    </item>

    <item android:title="Coach">
        <menu>
            <item
                android:id="@+id/navTeamOverview"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/navAbilityRating"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/navTeamComparision"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_team_comparision" />
        </menu>
    </item>

    <item android:title="Strategy Scouter">
        <menu>
            <item
                android:id="@+id/nav_stratScouter"
                android:icon="@drawable/ic_menu_send"
                android:title="Comments" />
        </menu>
    </item>

    <item android:title="Bentzi">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Quotes" />
        </menu>
    </item>


</menu>
